<resources>
    <string name="app_name">Calculator</string>
    <string name="AC">AC</string>
    <string name="plusminus">+/-</string>
    <string name="root">\u221a</string>
    <string name="divide">\u00F7</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="multiply">\u00D7</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_three">3</string>
    <string name="num_two">2</string>
    <string name="num_one">1</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="Clear">C</string>
    <string name="num_zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
</resources>
