<?xml version="1.0" encoding="utf-8"?>
<!--https://stackoverflow.com/questions/24928574/android-gridlayout-center-horizontaly-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBlack1"
    >
    <EditText android:id="@+id/currentStatus"
        android:layout_width="320sp"
        android:layout_height="32sp"
        android:textSize="30sp"
        android:background="@drawable/textview_background"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="-2dp"
        android:cursorVisible="false"
        android:gravity="right"
        android:focusable="false"
        />
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context="com.example.viswanathms.ass2.MainActivity"
        android:rowCount="6"
        android:columnCount="4"
        android:layout_gravity="center">
        <!--https://stackoverflow.com/questions/9332806/prevent-edittext-to-show-softkeyboard-when-focused-->
        <EditText
            android:id="@+id/inputOutputField"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="0"
            android:background="@drawable/textview_background"
            android:gravity="right"
            android:hint="0"
            android:focusable="false"
            android:layout_marginBottom="10dp"
            android:cursorVisible="false"
            android:textSize="50sp" />
        <!--ROW 1-->
        <Button
            android:id="@+id/allClear"
            android:text="@string/AC"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operation_button_color"
            />

        <Button
            android:id="@+id/plusminus"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/plusminus"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operation_button_color" />

        <Button
            android:id="@+id/root"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@drawable/operation_button_color"
            android:minHeight="0dp"
            android:text="@string/root"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp" />
        <Button
            android:id="@+id/divide"
            android:text="@string/divide"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operation_button_color"
        />

        <!--ROW 2-->
        <Button
            android:id="@+id/Seven"
            android:text="@string/num_seven"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/Eight"
            android:text="@string/num_eight"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/Nine"
            android:text="@string/num_nine"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/multiply"
            android:text="@string/multiply"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operation_button_color"
            />
        <!--ROW 3-->
        <Button
            android:id="@+id/four"
            android:text="@string/num_four"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/five"
            android:text="@string/num_five"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/six"
            android:text="@string/num_six"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />

        <Button
            android:id="@+id/minus"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/sub"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operation_button_color"
            />
        <!--ROW 4-->
        <Button
            android:id="@+id/one"
            android:text="@string/num_one"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/two"
            android:text="@string/num_two"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/three"
            android:text="@string/num_three"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/plus"
            android:text="@string/add"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/operation_button_color"
            />
        <!--ROW 5-->
        <Button
            android:id="@+id/clear"
            android:text="@string/Clear"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/zero"
            android:text="@string/num_zero"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/decimal"
            android:text="@string/decimal"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:background="@drawable/calculator_button_background"
            />
        <Button
            android:id="@+id/equals"
            android:text="@string/equals"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="30sp"
            android:layout_marginRight="6dp"
            android:background="@drawable/operation_button_color"
            />
    </GridLayout>
</LinearLayout>